fix: buttons are not centered

--- a/src/components/player-control/message-settings-btn/index.scss
+++ b/src/components/player-control/message-settings-btn/index.scss
@@ -1,3 +1,3 @@
 .btn {
-    text-align: center;
+    text-align: center !important;
 }
